FASE 4 completa: UI/UX, persistencia, documentación, tests
- Debug overlay (F3): fps, ticks, hitboxes
- Menú ajustes: pantalla completa + 3 sliders de volumen
- Fullscreen: canvas + cámara se redimensionan
- Mejora visual completa: paleta oscura unificada, gradientes,
  scoreboard tipo tabla, crosshair, health bar, glow balas
- Persistencia SQLite/PostgreSQL con HikariCP:
  DatabaseManager + UserRepository para usuarios
- Javadoc en español en 15 clases principales
- README.md, AGENTS.md, MEMORY.md actualizados
- Licencia MIT (LICENSE)
- 21 tests UI con TestFX + Xvfb (Login, GameOver, TitleBar)
- Fix abandonar partida ghost bug
- Fix race condition disconnect/reconnect vía cola
- Idle kick system (30s -> 10s warning -> kick)
- Tools limpiados (cliente.py y test.py rotos eliminados)
- .gitattributes y .env.example corregidos (sin espacios)