@@ -26,15 +26,31 @@ class DamageSystemTest {
     @DisplayName("Debe marcar jugador como no vivo cuando HP llega a cero")
     void playerDiesAtZeroHealth() {
         Player player = new Player("p1", "Player1", new Vector2(0, 0));
-        player.setHealth(25);
-        player.takeDamage(25); // HP = 0
+        player.setHealth(50);
         state.addPlayer(player);
 
-        assertTrue(player.isAlive()); // Aún vivo antes del system
+        assertTrue(player.isAlive());
 
-        system.update(state, 0.05f, Collections.emptyList(), null);
+        system.update(state, 0.05f, java.util.List.of(), null);
+
+        assertEquals(50, player.getHealth());
+        assertTrue(player.isAlive());
+
+        player.takeDamage(25);
+        assertTrue(player.isAlive());
+        assertEquals(25, player.getHealth());
+
+        system.update(state, 0.05f, java.util.List.of(), null);
+
+        assertEquals(25, player.getHealth());
+        assertTrue(player.isAlive());
+
+        player.takeDamage(25);
+
+        system.update(state, 0.05f, java.util.List.of(), null);
 
         assertFalse(player.isAlive());
+        assertEquals(0, player.getHealth());
     }
 
     @Test
